Direction and Path
Adds the "Direction" enum and changes Paths from strings to ArrayLists of Direction. Refactors Testapus to work with this setup.