@@ -1,5 +1,7 @@
 package security;
 
+import java.util.Base64;
+
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
 
@@ -17,14 +19,12 @@ public class DesEncrypter {
 		ecipher.init(Cipher.ENCRYPT_MODE, key);
 	}
 
-	//@SuppressWarnings("restriction")
-	@SuppressWarnings("restriction")
 	public String encrypt(String str) throws Exception {
 		// Encode the string into bytes using utf-8
 		byte[] utf8 = str.getBytes("UTF8");
 		// Encrypt
 		byte[] enc = ecipher.doFinal(utf8);
 		// Encode bytes to base64 to get a string
-		return new sun.misc.BASE64Encoder().encode(enc);
+		return new String(Base64.getEncoder().encode( enc ));
 	}
 }
